@@ -4,16 +4,13 @@
   <groupId>com.aliyun</groupId>
   <artifactId>aliyun-java-sdk-ft</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>undefined-SNAPSHOT</version>
   <name>aliyun-java-sdk-ft</name>
   <url>http://www.aliyun.com</url>
   <description>Aliyun Open API SDK for Java
-
 Copyright (C) Alibaba Cloud Computing
 All rights reserved.
-
 版权所有 （C）阿里云计算有限公司
-
 http://www.aliyun.com</description>
   <distributionManagement>
     <snapshotRepository>
@@ -30,7 +27,7 @@ http://www.aliyun.com</description>
       <groupId>com.aliyun</groupId>
       <artifactId>aliyun-java-sdk-core</artifactId>
       <optional>true</optional>
-      <version>[4.3.2,5.0.0)</version>
+      <version>[4.4.9,5.0.0)</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -73,8 +70,7 @@ http://www.aliyun.com</description>
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <excludes>
-					</excludes>
+          <excludes/>
         </configuration>
       </plugin>
       <plugin>
@@ -88,9 +84,10 @@ http://www.aliyun.com</description>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8</version>
+        <version>3.1.0</version>
         <configuration>
           <encoding>UTF-8</encoding>
+          <doclint>none</doclint>
         </configuration>
       </plugin>
       <plugin>
